--- a/app/src/main/res/navigation/croco_nav_graph.xml
+++ b/app/src/main/res/navigation/croco_nav_graph.xml
@@ -3,28 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/croco_nav_graph"
-    app:startDestination="@id/croco_nav_graph_fragment_login">
+    app:startDestination="@+id/fragment_items">
 
     <fragment
-        android:id="@+id/croco_nav_graph_fragment_login"
-        android:name="com.example.crocoandroidapp.presentation.login.fragment.LoginFragment"
-        android:label="LoginFragment"
-        tools:layout="@layout/fragment_login">
-        <action
-            android:id="@+id/croco_nav_graph_action_login_to_croco"
-            app:destination="@id/croco_nav_graph_fragment_croco"
-            app:popUpTo="@id/croco_nav_graph_fragment_login"
-            app:popUpToInclusive="true" />
-    </fragment>
+        android:id="@+id/fragment_items"
+        android:name="com.example.crocoandroidapp.presentation.items.fragment.ItemsFragment"
+        android:label="ItemsFragment"
+        tools:layout="@layout/fragment_items" />
 
     <fragment
-        android:id="@+id/croco_nav_graph_fragment_croco"
-        android:name="com.example.crocoandroidapp.presentation.croco.fragment.CrocoFragment"
-        android:label="CrocoFragment"
-        tools:layout="@layout/fragment_croco" />
-
-    <action
-        android:id="@+id/croco_nav_graph_action_global_login"
-        app:destination="@id/croco_nav_graph_fragment_login" />
+        android:id="@+id/fragment_profile"
+        android:name="com.example.crocoandroidapp.presentation.profile.fragment.ProfileFragment"
+        android:label="ProfileFragment"
+        tools:layout="@layout/fragment_profile" />
 
 </navigation>
