--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                style="@style/ContentText"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/login_label"
