--- a/app/src/main/res/menu/bottom_navigation_croco_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_croco_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/fragment_items"
-        android:icon="@drawable/ic_items_accent_24dp"
-        android:title="@string/items" />
+        android:id="@+id/fragment_choose_users"
+        android:icon="@drawable/ic_tasks_accent_24dp"
+        android:title="@string/tasks" />
     <item
         android:id="@+id/fragment_profile"
         android:icon="@drawable/ic_profile_accent_24dp"
