--- a/app/src/main/res/navigation/croco_nav_graph.xml
+++ b/app/src/main/res/navigation/croco_nav_graph.xml
@@ -3,18 +3,64 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/croco_nav_graph"
-    app:startDestination="@+id/fragment_items">
+    app:startDestination="@+id/fragment_choose_users">
 
     <fragment
-        android:id="@+id/fragment_items"
-        android:name="com.example.crocoandroidapp.presentation.items.fragment.ItemsFragment"
+        android:id="@+id/fragment_tasks"
+        android:name="com.example.crocoandroidapp.presentation.tasks.fragment.TasksFragment"
         android:label="ItemsFragment"
-        tools:layout="@layout/fragment_items" />
+        tools:layout="@layout/fragment_tasks" />
 
     <fragment
         android:id="@+id/fragment_profile"
         android:name="com.example.crocoandroidapp.presentation.profile.fragment.ProfileFragment"
         android:label="ProfileFragment"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile">
+        <action
+            android:id="@+id/action_profile_to_edit_profile"
+            app:destination="@id/fragment_edit_profile"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragment_edit_profile"
+        android:name="com.example.crocoandroidapp.presentation.edit_profile.fragment.EditProfileFragment"
+        android:label="EditProfileFragment"
+        tools:layout="@layout/fragment_edit_profile">
+        <action
+            android:id="@+id/action_edit_profile_to_profile"
+            app:destination="@id/fragment_profile" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragment_choose_users"
+        android:name="com.example.crocoandroidapp.presentation.choose_users.fragment.ChooseUsersFragment"
+        android:label="ChooseUsersFragment"
+        tools:layout="@layout/fragment_choose_user">
+        <action
+            android:id="@+id/action_choose_users_to_choosing_users"
+            app:destination="@id/fragment_choosing_users"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragment_choosing_users"
+        android:name="com.example.crocoandroidapp.presentation.choosing_users.fragment.ChoosingUsersFragment"
+        android:label="ChoosingUsersFragment"
+        tools:layout="@layout/fragment_choosing_users">
+        <action
+            android:id="@+id/action_choosing_users_to_fragment_tasks"
+            app:destination="@id/fragment_tasks"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+    </fragment>
 
 </navigation>
