--- a/app/src/main/res/layout/fragment_choose_users.xml
+++ b/app/src/main/res/layout/fragment_choose_users.xml
@@ -13,7 +13,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="@string/choose_user" />
+            android:text="@string/choose_users" />
 
     </ScrollView>
 
